--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.5",
+    "@types/marked": "^0.6.1",
     "@types/node": "11.9.4",
-    "@types/react": "16.8.3",
+    "@types/react": "^16.8.3",
     "@types/react-dom": "16.8.2",
+    "@types/styled-components": "^4.1.10",
+    "marked": "^0.6.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3",
     "typescript": "3.3.3"
   },
   "scripts": {
